--- a/app/Resources/views/genus/show.html.twig
+++ b/app/Resources/views/genus/show.html.twig
@@ -1,1 +1,26 @@
+{% extends 'base.html.twig' %}
+
+{% block title %}Genus {{  name }}{%  endblock %}
+
+{%  block body %}
 <h1>The Genus {{ name }}</h1>
+        <a href="{{ path('genus_show_notes', {'genusName': name }) }}">Json Notes</a>
+
+        <div id="js-notes-wrapper"></div>
+{% endblock %}
+
+{% block javascripts %}
+        {{ parent() }}
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.14.3/react.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.14.3/react-dom.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.23/browser.min.js"></script>
+        <script type="text/babel" src="{{ asset('js/notes.react.js') }}"></script>
+        <script type="text/babel">
+                var notesUrl = '{{ path('genus_show_notes', {'genusName': name}) }}';
+                var name = '{{ name }}';
+
+                ReactDOM.render(
+                  <NoteSection url={notesUrl} genusName={name} />, document.getElementById('js-notes-wrapper')
+                );
+        </script>
+{% endblock %}
