--- a/app/Resources/views/genus/show.html.twig
+++ b/app/Resources/views/genus/show.html.twig
@@ -1,26 +1,39 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Genus {{  name }}{%  endblock %}
+{% block title %}Genus {{ name }}{% endblock %}
 
-{%  block body %}
-<h1>The Genus {{ name }}</h1>
-        <a href="{{ path('genus_show_notes', {'genusName': name }) }}">Json Notes</a>
+{% block body %}
+    <h2 class="genus-name">{{ name }}</h2>
 
-        <div id="js-notes-wrapper"></div>
+    <div class="sea-creature-container">
+        <div class="genus-photo"></div>
+        <div class="genus-details">
+            <dl class="genus-details-list">
+                <dt>Subfamily:</dt>
+                <dd>Octopodinae</dd>
+                <dt>Known Species:</dt>
+                <dd>{{ '99999'|number_format }}</dd>
+                <dt>Fun Fact:</dt>
+                <dd>{{ funFact|raw }}</dd>
+            </dl>
+        </div>
+    </div>
+    <div id="js-notes-wrapper"></div>
 {% endblock %}
 
 {% block javascripts %}
-        {{ parent() }}
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.14.3/react.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.14.3/react-dom.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.23/browser.min.js"></script>
-        <script type="text/babel" src="{{ asset('js/notes.react.js') }}"></script>
-        <script type="text/babel">
-                var notesUrl = '{{ path('genus_show_notes', {'genusName': name}) }}';
-                var name = '{{ name }}';
+    {{ parent() }}
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.14.3/react.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.14.3/react-dom.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.23/browser.min.js"></script>
 
-                ReactDOM.render(
-                  <NoteSection url={notesUrl} genusName={name} />, document.getElementById('js-notes-wrapper')
-                );
-        </script>
+    <script type="text/babel" src="{{ asset('js/notes.react.js') }}"></script>
+    <script type="text/babel">
+        var notesUrl = '{{ path('genus_show_notes', {'genusName': name}) }}';
+
+        ReactDOM.render(
+          <NoteSection url={notesUrl} />,
+          document.getElementById('js-notes-wrapper')
+        );
+    </script>
 {% endblock %}
